import React from "react";
import { render } from "@testing-library/react";
import ESButtonGroup from "../ESButtonGroup";
import ESButton from "../../ESButton/ESButton";

test("It renders without crashing", () => {
  const component = render(
    <ESButtonGroup>
      <ESButton variant="primary">Button 1</ESButton>
      <ESButton variant="secondary">Button 2</ESButton>
      <ESButton variant="secondary">Button 3</ESButton>
      <ESButton variant="tertiary">Button 3</ESButton>
    </ESButtonGroup>,
  );
  expect(component).toBeTruthy();
});

it("Horizontal matches DOM Snapshot", () => {
  const domTree = render(
    <ESButtonGroup direction="horizontal">
      <ESButton variant="primary">Button 1</ESButton>
      <ESButton variant="secondary">Button 2</ESButton>
      <ESButton variant="secondary">Button 3</ESButton>
      <ESButton variant="tertiary">Button 3</ESButton>
    </ESButtonGroup>,
  );
  expect(domTree).toMatchSnapshot();
});

it("Horizontal matches DOM Snapshot", () => {
  const domTree = render(
    <ESButtonGroup direction="vertical">
      <ESButton variant="primary">Button 1</ESButton>
      <ESButton variant="secondary">Button 2</ESButton>
      <ESButton variant="secondary">Button 3</ESButton>
      <ESButton variant="tertiary">Button 3</ESButton>
    </ESButtonGroup>,
  );
  expect(domTree).toMatchSnapshot();
});
