// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal matches DOM Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="ESButtonGroup horizontal"
      >
        <ul
          class="list"
        >
          <button
            class="ESButton primary fill medium"
            type="button"
          >
            Button 1
          </button>
          <button
            class="ESButton secondary fill medium"
            type="button"
          >
            Button 2
          </button>
          <button
            class="ESButton secondary fill medium"
            type="button"
          >
            Button 3
          </button>
          <button
            class="ESButton tertiary fill medium"
            type="button"
          >
            Button 3
          </button>
        </ul>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="ESButtonGroup horizontal"
    >
      <ul
        class="list"
      >
        <button
          class="ESButton primary fill medium"
          type="button"
        >
          Button 1
        </button>
        <button
          class="ESButton secondary fill medium"
          type="button"
        >
          Button 2
        </button>
        <button
          class="ESButton secondary fill medium"
          type="button"
        >
          Button 3
        </button>
        <button
          class="ESButton tertiary fill medium"
          type="button"
        >
          Button 3
        </button>
      </ul>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Horizontal matches DOM Snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="ESButtonGroup vertical"
      >
        <ul
          class="list"
        >
          <button
            class="ESButton primary fill medium"
            type="button"
          >
            Button 1
          </button>
          <button
            class="ESButton secondary fill medium"
            type="button"
          >
            Button 2
          </button>
          <button
            class="ESButton secondary fill medium"
            type="button"
          >
            Button 3
          </button>
          <button
            class="ESButton tertiary fill medium"
            type="button"
          >
            Button 3
          </button>
        </ul>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="ESButtonGroup vertical"
    >
      <ul
        class="list"
      >
        <button
          class="ESButton primary fill medium"
          type="button"
        >
          Button 1
        </button>
        <button
          class="ESButton secondary fill medium"
          type="button"
        >
          Button 2
        </button>
        <button
          class="ESButton secondary fill medium"
          type="button"
        >
          Button 3
        </button>
        <button
          class="ESButton tertiary fill medium"
          type="button"
        >
          Button 3
        </button>
      </ul>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
